# drilling_sequence

./: .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml
.githooks/: pre-push
.github/workflows/: ci.yml
Timeline_v1.2_0603/: README.md  README.txt  app.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  windows_service.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_activities.py  003_phase4_phase5.py  004_revisions.py  005_approvers.py  006_rig_contracts.py  007_rig_contract_status.py  008_user_is_admin.py  009_revision_decision.py  010_activity_lineage_completion.py  011_project_clone_parent.py  012_drop_activity_rig_contract_fields.py  013_drop_activity_readiness_fields.py  014_review_workflow.py  015_readiness_codes_flood_risk.py  016_activity_project.py  017_activity_readiness_required.py  018_readiness_status_collapse.py  019_hwu.py  020_change_notes.py  021_contract_status_two_state.py
backend/app/: config.py  database.py  main.py  static_spa.py
backend/app/assets/: chart_colors.json
backend/app/core/: auth.py  locks.py  logging_config.py  rbac.py
backend/app/models/: __init__.py  activity.py  approver.py  audit.py  change_note.py  hwu_contract.py  project.py  readiness.py  revision.py  rig_contract.py  user.py  viewer.py
backend/app/routers/: activities.py  admin.py  approvers.py  auth.py  change_notes.py  client_logs.py  contracts.py  dashboard.py  hwu_contracts.py  me.py  projects.py  readiness.py  reviewers.py  revisions.py  viewers.py
backend/app/schemas/: __init__.py  activity.py  admin.py  approver.py  audit.py  change_note.py  dashboard.py  diff.py  hwu_contract.py  project.py  readiness.py  revision.py  rig_contract.py  user.py  viewer.py
backend/app/services/: audit.py  conflicts.py  dashboard.py  data_processor.py  email.py  integrity.py  readiness.py  revision_diff.py  snapshot.py
backend/scripts/: seed_print_demo.py
backend/tests/: conftest.py  test_activities.py  test_admin.py  test_approvers.py  test_audit_governance.py  test_auth.py  test_change_notes.py  test_changes_since_approved.py  test_client_logs.py  test_compare_access.py  test_config.py  test_conflicts.py  test_dashboard.py  test_data_processor.py  test_edit_safety.py  test_error_handler.py  test_home_dashboard.py  test_hwu.py  test_import_long_schedule.py  test_lineage_clone.py  test_locking.py  test_logging.py  test_migration_model_parity.py  test_notifications.py  test_projects.py  test_readiness.py  test_review_workflow.py  test_revision_diff.py  test_revisions.py  test_static_spa.py
docs/: activity-import-template.csv  deployment-guide.md  maintainer-guide.md  mssql-migration.md  project-dashboard-spec.md  rbac-reference.md  review-approval-workflow-spec.md  user-guide.md
drilling_chart/core/: __init__.py  chart_generator.py
drilling_chart/export/: chart_exporter.py
drilling_chart/visualization/: icon_positioner.py  (+1 more)
drilling_chart_streamlit/: PORTABLE_SETUP_GUIDE.md  create_portable_fixed.py
frontend/: .dockerignore  .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
(+150 files in other folders)
