[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drilling-sequence-api"
version = "2.0.0"
requires-python = ">=3.11"
# Direct dependencies are pinned to exact versions for reproducible, audit-friendly
# builds (no floating specs). Runtime pins match the tested environment; the
# prod-only auth packages (fastapi-azure-auth, python-jose) are pinned to the
# current stable releases. Bump deliberately, not incidentally.
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "sqlalchemy[asyncio]==2.0.50",
    # Async DB drivers. asyncpg (PostgreSQL) is retained through the MSSQL
    # transition and should be dropped only after the MSSQL smoke test passes
    # (see docs/mssql-migration.md). aioodbc/pyodbc drive MSSQL via the system
    # Microsoft ODBC Driver 18 — NEW dependencies, flagged for IT review:
    #   pyodbc  5.3.0  (MIT-0)      — C-extension; needs the OS ODBC driver at runtime
    #   aioodbc 0.5.0  (Apache-2.0) — async wrapper, pulls in pyodbc only
    # pyodbc 5.3.0 ships cp310–cp314 win_amd64 wheels (5.2.0 stopped at cp313),
    # so it installs cleanly on the host's Python 3.14 with no build toolchain.
    "asyncpg==0.31.0",
    "aioodbc==0.5.0",
    "pyodbc==5.3.0",
    "alembic==1.18.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "fastapi-azure-auth==5.2.0",
    "python-multipart==0.0.29",
    "pandas==3.0.3",
    "openpyxl==3.1.5",
    "python-jose[cryptography]==3.5.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "aiosqlite==0.22.1",
    "pytest-mock==3.15.1",
    "ruff==0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
